owncloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        image: owncloud/server:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/mnt/data"
          name: data


      - name: postgresql
        image: postgresql:latest
        ports:
          - containerPort: 5432
            protocol: TCP
        volumeMounts:
          - mountPath: /var/lib/postgresql
            name: owncloud-db


      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: owncloud-pvc
      - name: owncloud-db
        persistentVolumeClaim:
          claimName: owncloud-db-pvc
