owncloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
  labels:
    app: owncloud
spec:
  ports:
  - port: 8080
    targetPort: 8080
    name: web
  selector:
    app: owncloud
