owncloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ingress
  namespace: owncloud
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer-stg
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - cloud.spof.tech
      secretName: owncloud-certs
  rules:
    - host: "cloud.spof.tech"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud
                port:
                  name: web
